--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "ISC",
   "homepage": "",
   "engines": {
-    "node": "20.x"
+    "node": ">=18.x"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
@@ -27,8 +27,6 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "google-auth-library": "^6.1.3",
-    "jsonwebtoken": "^9.0.3",
-    "jwt-decode": "^3.1.2",
     "mongoose": "^7.8.3",
     "nodemon": "^3.1.9",
     "react": "^18.2.0",
@@ -37,7 +35,8 @@
     "react-router-dom": "^6.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.0.0",
